cluster/manifests/fluentd-delayed-unlink/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fluentd-delayed-unlink
  labels:
    name: fluentd-delayed-unlink
    pod-security.kubernetes.io/enforce: privileged
