cluster/manifests/fluentd-delayed-unlink/overlays/dev/peer_authentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: fluentd-delayed-unlink
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: fluentd-delayed-unlink
      app.kubernetes.io/component: ""
  mtls:
    mode: STRICT
